{{$NEXT}}

0.04     2013-06-16

- Provide the _driver_name sub needed by the latest Database::Migrator::Core.


0.03     2013-04-06

- Added a compilation test to make CPAN testers happy.


0.02     2013-04-02

- Improved documentation.


0.01     2013-04-01

- First release upon an unsuspecting world.