@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Added support for all missing createdb options: --locale, --lc-collate,
+  --lc-ctype, --tablespace, and --template.
+
+
 0.04     2013-06-16
 
 - Provide the _driver_name sub needed by the latest Database::Migrator::Core.
